internal/gatewayapi/testdata/backendtrafficpolicy-listenerset-attached-route.in.yaml
gateways:
  - apiVersion: gateway.networking.k8s.io/v1
    kind: Gateway
    metadata:
      namespace: envoy-gateway
      name: gateway-1
    spec:
      gatewayClassName: envoy-gateway-class
      listeners:
        - name: http
          protocol: HTTP
          port: 80
          allowedRoutes:
            namespaces:
              from: All
      allowedListeners:
        namespaces:
          from: All
listenerSets:
  - apiVersion: gateway.networking.k8s.io/v1
    kind: ListenerSet
    metadata:
      namespace: default
      name: listener-1
    spec:
      parentRef:
        name: gateway-1
        namespace: envoy-gateway
      listeners:
        - name: extra-http-one
          protocol: HTTP
          port: 8081
        - name: extra-http-two
          protocol: HTTP
          port: 8082
httpRoutes:
  - apiVersion: gateway.networking.k8s.io/v1
    kind: HTTPRoute
    metadata:
      namespace: default
      name: httproute-1
    spec:
      hostnames:
        - gateway.envoyproxy.io
      parentRefs:
        - group: gateway.networking.k8s.io
          kind: ListenerSet
          name: listener-1
      rules:
        - matches:
            - path:
                value: "/http1"
          backendRefs:
            - name: service-1
              port: 8080
  - apiVersion: gateway.networking.k8s.io/v1
    kind: HTTPRoute
    metadata:
      namespace: default
      name: httproute-2
    spec:
      hostnames:
        - gateway.envoyproxy.io
      parentRefs:
        - group: gateway.networking.k8s.io
          kind: ListenerSet
          name: listener-1
          port: 8081
      rules:
        - matches:
            - path:
                value: "/http2"
          backendRefs:
            - name: service-2
              port: 8080
grpcRoutes:
  - apiVersion: gateway.networking.k8s.io/v1alpha2
    kind: GRPCRoute
    metadata:
      namespace: default
      name: grpcroute-1
    spec:
      parentRefs:
        - group: gateway.networking.k8s.io
          kind: ListenerSet
          name: listener-1
      rules:
        - backendRefs:
            - name: service-1
              port: 8080
backendTrafficPolicies:
  - apiVersion: gateway.envoyproxy.io/v1alpha1
    kind: BackendTrafficPolicy
    metadata:
      namespace: default
      name: policy-for-httproute-1
    spec:
      targetRefs:
        - group: gateway.networking.k8s.io
          kind: HTTPRoute
          name: httproute-1
      requestBuffer:
        limit: 4Mi
  - apiVersion: gateway.envoyproxy.io/v1alpha1
    kind: BackendTrafficPolicy
    metadata:
      namespace: default
      name: policy-for-httproute-2
    spec:
      targetRefs:
        - group: gateway.networking.k8s.io
          kind: HTTPRoute
          name: httproute-2
      requestBuffer:
        limit: 8Mi
  - apiVersion: gateway.envoyproxy.io/v1alpha1
    kind: BackendTrafficPolicy
    metadata:
      namespace: default
      name: policy-for-grpcroute-1
    spec:
      targetRefs:
        - group: gateway.networking.k8s.io
          kind: GRPCRoute
          name: grpcroute-1
      requestBuffer:
        limit: 16Mi
